Fix tree view overflow

--- a/app/components/file/browse/file-explorer/file-table-view/file-table-view.scss
+++ b/app/components/file/browse/file-explorer/file-table-view/file-table-view.scss
@@ -46,6 +46,9 @@ bl-file-table-view {
         .current-path {
             line-height: $file-header-height;
             vertical-align: middle;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
         }
     }
     .icon {
